--- a/loadUI/load.ui
+++ b/loadUI/load.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>974</width>
-    <height>669</height>
+    <height>672</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -33,17 +33,37 @@
      <widget class="QComboBox" name="comboBox">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>130</x>
         <y>0</y>
         <width>61</width>
         <height>31</height>
        </rect>
       </property>
      </widget>
+     <widget class="QTableWidget" name="tableWidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>40</y>
+        <width>111</width>
+        <height>541</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QListWidget" name="listWidget">
+      <property name="geometry">
+       <rect>
+        <x>715</x>
+        <y>40</y>
+        <width>251</width>
+        <height>541</height>
+       </rect>
+      </property>
+     </widget>
      <widget class="QTabWidget" name="tabWidget_2">
       <property name="geometry">
        <rect>
-        <x>710</x>
+        <x>720</x>
         <y>40</y>
         <width>251</width>
         <height>531</height>
@@ -212,10 +232,20 @@
        </attribute>
       </widget>
      </widget>
+     <widget class="QTableWidget" name="tableWidget_2">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>40</y>
+        <width>581</width>
+        <height>541</height>
+       </rect>
+      </property>
+     </widget>
      <widget class="QComboBox" name="comboBox_2">
       <property name="geometry">
        <rect>
-        <x>80</x>
+        <x>200</x>
         <y>0</y>
         <width>61</width>
         <height>31</height>
@@ -225,7 +255,7 @@
      <widget class="QComboBox" name="comboBox_3">
       <property name="geometry">
        <rect>
-        <x>150</x>
+        <x>270</x>
         <y>0</y>
         <width>61</width>
         <height>31</height>
@@ -235,20 +265,10 @@
      <widget class="QComboBox" name="comboBox_4">
       <property name="geometry">
        <rect>
-        <x>220</x>
+        <x>340</x>
         <y>0</y>
         <width>61</width>
         <height>31</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QTableWidget" name="tableWidget_2">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>40</y>
-        <width>691</width>
-        <height>531</height>
        </rect>
       </property>
      </widget>
