--- a/loadUI/load.ui
+++ b/loadUI/load.ui
@@ -133,14 +133,14 @@
               <number>8</number>
              </property>
              <item row="2" column="1">
-              <widget class="QLabel" name="label_creater">
+              <widget class="QLabel" name="label_startdate">
                <property name="text">
                 <string/>
                </property>
               </widget>
              </item>
              <item row="1" column="1">
-              <widget class="QLabel" name="label_id">
+              <widget class="QLabel" name="label_type">
                <property name="text">
                 <string/>
                </property>
@@ -154,7 +154,7 @@
               </widget>
              </item>
              <item row="3" column="1">
-              <widget class="QLabel" name="label_dday">
+              <widget class="QLabel" name="label_duedate">
                <property name="text">
                 <string/>
                </property>
@@ -170,21 +170,21 @@
              <item row="1" column="0">
               <widget class="QLabel" name="label_2">
                <property name="text">
-                <string>version ID</string>
+                <string>file type</string>
                </property>
               </widget>
              </item>
              <item row="2" column="0">
               <widget class="QLabel" name="label_3">
                <property name="text">
-                <string>creater</string>
+                <string>start date</string>
                </property>
               </widget>
              </item>
              <item row="3" column="0">
               <widget class="QLabel" name="label_4">
                <property name="text">
-                <string>D-day</string>
+                <string>due date</string>
                </property>
               </widget>
              </item>
