--- a/publishUI/newpub.ui
+++ b/publishUI/newpub.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>632</width>
-    <height>670</height>
+    <width>667</width>
+    <height>692</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>632</width>
-    <height>646</height>
+    <width>667</width>
+    <height>692</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>632</width>
-    <height>700</height>
+    <width>667</width>
+    <height>692</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -29,15 +29,15 @@
    <widget class="QLabel" name="label_pubback">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>641</width>
-      <height>641</height>
+      <x>-4</x>
+      <y>-10</y>
+      <width>667</width>
+      <height>661</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel {
-    background-image: url(&quot;/nas/Viper/minseo/forui/pubback2.png&quot;);
+    background-image: url(&quot;/nas/Viper/minseo/forui/backgroundpub.png&quot;);
     background-repeat: no-repeat;  /* 반복 방지 */
     background-position: center;  /* 중앙 정렬 */
     background-size: contain;  /* QLabel 크기에 맞게 비율 유지 */
@@ -51,46 +51,72 @@
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>100</y>
-      <width>261</width>
-      <height>361</height>
+      <x>360</x>
+      <y>80</y>
+      <width>281</width>
+      <height>421</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QTableWidget {
+    background: transparent; /* 🔹 배경을 완전히 투명하게 설정 */
+    border: none; /* 🔹 테두리 없애기 */
+    gridline-color: rgba(0, 0, 0, 50); /* 🔹 그리드 라인 투명하게 */
+}
+
+QHeaderView::section {
+    background: transparent; /* 🔹 헤더 배경도 투명 */
+    border: none;
+}
+</string>
     </property>
    </widget>
    <widget class="QTableWidget" name="tableWidget_filelist">
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>250</y>
+      <y>280</y>
       <width>291</width>
-      <height>151</height>
+      <height>191</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QTableWidget {
+    background: transparent; /* 🔹 배경을 완전히 투명하게 설정 */
+    border: none; /* 🔹 테두리 없애기 */
+    gridline-color: rgba(0, 0, 0, 50); /* 🔹 그리드 라인 투명하게 */
+}
+
+QHeaderView::section {
+    background: transparent; /* 🔹 헤더 배경도 투명 */
+    border: none;
+}
+</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_publish">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>360</x>
       <y>530</y>
-      <width>501</width>
-      <height>91</height>
+      <width>291</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>Myriad Pro</family>
+      <family>Pretendard Light</family>
       <pointsize>-1</pointsize>
      </font>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
     border: none;
-    background: url(&quot;/nas/Viper/minseo/forui/pubbutton.png&quot;) no-repeat center;
+    background: url(&quot;/nas/Viper/minseo/forui/publish.png&quot;) no-repeat center;
     background-size: contain;
 	border-radius: 10px;
 	color: white;
-	font-size: 19px;
+	font-size: 15px;
 }
 
 QPushButton:pressed {
@@ -106,10 +132,10 @@ QPushButton:pressed {
    <widget class="QGroupBox" name="groupBox_checkbox">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>360</y>
-      <width>241</width>
-      <height>91</height>
+      <x>370</x>
+      <y>440</y>
+      <width>251</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="title">
@@ -119,20 +145,20 @@ QPushButton:pressed {
    <widget class="QLineEdit" name="lineEdit_memo">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>260</y>
-      <width>241</width>
-      <height>111</height>
+      <x>400</x>
+      <y>290</y>
+      <width>223</width>
+      <height>120</height>
      </rect>
     </property>
    </widget>
    <widget class="QLabel" name="label_thumbnail">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>140</y>
-      <width>241</width>
-      <height>121</height>
+      <x>400</x>
+      <y>150</y>
+      <width>221</width>
+      <height>126</height>
      </rect>
     </property>
     <property name="text">
@@ -150,7 +176,7 @@ QPushButton:pressed {
     </property>
     <property name="font">
      <font>
-      <family>Myriad Pro</family>
+      <family>Pretendard ExtraLight</family>
       <pointsize>-1</pointsize>
      </font>
     </property>
@@ -161,7 +187,7 @@ QPushButton:pressed {
     background-position: center;  /* 중앙 정렬 */
     background-size: contain;  /* 크기를 자동 조정 */
     color: white;  /* 글자 색상 (흰색) */
-    font-size: 8px;  /* 글자 크기 */
+    font-size: 7px;  /* 글자 크기 */
   
     text-align: center;  /* 텍스트 중앙 정렬 */
 }</string>
@@ -170,14 +196,99 @@ QPushButton:pressed {
      <string>Publish to ShotGrid</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_filename">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>200</y>
+      <width>271</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>25</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit {
+    background: rgba(0, 0, 0, 0); /* 배경 투명 */
+    border: none;
+    color: #6B82BA;  /* 기본 텍스트 색상 */
+    font-size: 30px; /* 기본 글자 크기 */
+}
+
+/* 사용자가 입력 중일 때 스타일 변경 */
+QLineEdit:focus {
+    color: white;  /* 입력 중에는 흰색 */
+    font-size: 30px; /* 입력 중에는 글자 크기 변경 */
+}</string>
+    </property>
+    <property name="text">
+     <string>SELECT YOUR FILE</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>260</y>
+      <width>311</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Pretendard ExtraLight</family>
+      <pointsize>-1</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+
+    background-repeat: no-repeat;  /* 반복 방지 */
+    background-position: center;  /* 중앙 정렬 */
+    background-size: contain;  /* 크기를 자동 조정 */
+    color: #A9A9A9;  /* 글자 색상 (흰색) */
+    font-size: 9px;  /* 글자 크기 */
+  
+    text-align: center;  /* 텍스트 중앙 정렬 */
+}</string>
+    </property>
+    <property name="text">
+     <string>Please select the file you want to publish and select the method
+</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_user">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>30</y>
+      <width>30</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel {
+    background-image: url(&quot;/nas/Viper/minseo/forui/user.png&quot;);
+    background-repeat: no-repeat;  /* 반복 방지 */
+    background-position: center;  /* 중앙 정렬 */
+    background-size: contain;  /* QLabel 크기에 맞게 비율 유지 */
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>632</width>
-     <height>25</height>
+     <width>667</width>
+     <height>27</height>
     </rect>
    </property>
   </widget>
